# atsamc21

boards/atsamc21_xpro/: Cargo.toml
boards/atsamc21_xpro/examples/: blinky_basic.rs
boards/atsamc21_xpro/src/: lib.rs  pins.rs
hal/: Cargo.toml
