[package]
name = "atsamc-hal"
version = "0.1.0"
authors = [
    "Michael Stuckey <michael.stuckey@gmail.com>"
]
description = "HAL and Peripheral access API for ATSAMC21 microcontrollers"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
