[package]
name = "atsamc21_xpro"
version = "0.1.0"
authors = [
    "Michael Stuckey <michael.stuckey@gmail.com>"
]
description = "Board Support crate for the SAM C21 Xplained Pro Evaluation Kit"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
embedded-hal = "0.2.6"

[dependencies.cortex-m-rt]
version = "0.6.12"
optional = true

[dependencies.atsamc-hal]
path = "../../hal"
version = "0.1"
default-features = false